# mockturtle

examples/: CMakeLists.txt
experiments/: .~lock.vpr_runs_vpr_data.csv#  aig2blif.sh  stratixiv_vpr_data.csv  vpr.sh  vpr_parser.py  vpr_runs_stratixiv_vpr_data.csv  vpr_runs_vpr_data.csv
experiments/benchmarks/: DMA_dup.aig  DSP_dup.aig  RISC_dup.aig  ac97_ctrl_dup.aig  adder_dup.aig  aes_core_dup.aig  arbiter_dup.aig  bar_dup.aig  c1355_dup.aig  c17_dup.aig  c1908_dup.aig  c2670_dup.aig  c3540_dup.aig  c432_dup.aig  c499_dup.aig  c5315_dup.aig  c6288_dup.aig  c7552_dup.aig  c880_dup.aig  cavlc_dup.aig  ctrl_dup.aig  dec_dup.aig  des_area_dup.aig  des_perf_dup.aig  div_dup.aig  ethernet_dup.aig  hyp_dup.aig  i2c_dup.aig  int2float_dup.aig  iwls05_i2c_dup.aig  iwls05_mem_ctrl_dup.aig  leon3mp_dup.aig  log2_dup.aig  max_dup.aig  mem_ctrl_dup.aig  multiplier_dup.aig  netcard_dup.aig  pci_bridge32_dup.aig  priority_dup.aig  router_dup.aig  (+15 more)
experiments/benchmarks/blif_folder/: DMA.blif  DMA_dup.blif  DSP.blif  DSP_dup.blif  RISC.blif  RISC_dup.blif  ac97_ctrl.blif  ac97_ctrl_dup.blif  adder.blif  adder_dup.blif  aes_core.blif  aes_core_dup.blif  arbiter.blif  arbiter_dup.blif  bar.blif  bar_dup.blif  c1355.blif  c1355_dup.blif  c17.blif  c17_dup.blif  c1908.blif  c1908_dup.blif  c2670.blif  c2670_dup.blif  c3540.blif  c3540_dup.blif  c432.blif  c432_dup.blif  c499.blif  c499_dup.blif  c5315.blif  c5315_dup.blif  c6288.blif  c6288_dup.blif  c7552.blif  c7552_dup.blif  c880.blif  c880_dup.blif  cavlc.blif  cavlc_dup.blif  (+64 more)
experiments/vpr_runs/adder/: adder.net  (+2 more)
(+629 files in other folders)
